y.output
Grammar

    0 $accept: program $end

    1 program: decls stmt

    2 type: BOOL_TYPE
    3     | INT_TYPE

    4 decls: decls decl
    5      | %empty

    6 decl: type ID ';'

    7 stmts: stmts stmt
    8      | stmt

    9 stmt: '{' stmts '}'
   10     | ID '=' expr ';'
   11     | IF '(' expr ')' stmt
   12     | IF '(' expr ')' stmt ELSE stmt
   13     | WHILE '(' expr ')' stmt
   14     | FOR '(' stmt expr ';' stmt ')' stmt
   15     | ID INC ';'
   16     | ID DEC ';'
   17     | ID INCX expr ';'
   18     | ID DECX expr ';'
   19     | PRINT expr ';'

   20 expr: VAL
   21     | FALSE
   22     | TRUE
   23     | ID
   24     | '(' expr ')'
   25     | expr '+' expr
   26     | expr '-' expr
   27     | expr '*' expr
   28     | expr '/' expr
   29     | expr AND expr
   30     | expr OR expr
   31     | expr EQ expr
   32     | expr NE expr
   33     | expr GE expr
   34     | expr LE expr
   35     | expr '>' expr
   36     | expr '<' expr


Terminals, with rules where they appear

$end (0) 0
'(' (40) 11 12 13 14 24
')' (41) 11 12 13 14 24
'*' (42) 27
'+' (43) 25
'-' (45) 26
'/' (47) 28
';' (59) 6 10 14 15 16 17 18 19
'<' (60) 36
'=' (61) 10
'>' (62) 35
'{' (123) 9
'}' (125) 9
error (256)
AND (258) 29
OR (259) 30
GE (260) 33
LE (261) 34
EQ (262) 31
NE (263) 32
FALSE (264) 21
TRUE (265) 22
IF (266) 11 12
ELSE (267) 12
WHILE (268) 13
FOR (269) 14
PRINT (270) 19
BOOL_TYPE (271) 2
INT_TYPE (272) 3
ID (273) 6 10 15 16 17 18 23
VAL (274) 20
IF_ALONE (275)
INC (276) 15
DEC (277) 16
INCX (278) 17
DECX (279) 18


Nonterminals, with rules where they appear

$accept (37)
    on left: 0
program (38)
    on left: 1, on right: 0
type (39)
    on left: 2 3, on right: 6
decls (40)
    on left: 4 5, on right: 1 4
decl (41)
    on left: 6, on right: 4
stmts (42)
    on left: 7 8, on right: 7 9
stmt (43)
    on left: 9 10 11 12 13 14 15 16 17 18 19, on right: 1 7 8 11 12
    13 14
expr (44)
    on left: 20 21 22 23 24 25 26 27 28 29 30 31 32 33 34 35 36, on right:
    10 11 12 13 14 17 18 19 24 25 26 27 28 29 30 31 32 33 34 35 36


State 0

    0 $accept: . program $end

    $default  reduce using rule 5 (decls)

    program  go to state 1
    decls    go to state 2


State 1

    0 $accept: program . $end

    $end  shift, and go to state 3


State 2

    1 program: decls . stmt
    4 decls: decls . decl

    IF         shift, and go to state 4
    WHILE      shift, and go to state 5
    FOR        shift, and go to state 6
    PRINT      shift, and go to state 7
    BOOL_TYPE  shift, and go to state 8
    INT_TYPE   shift, and go to state 9
    ID         shift, and go to state 10
    '{'        shift, and go to state 11

    type  go to state 12
    decl  go to state 13
    stmt  go to state 14


State 3

    0 $accept: program $end .

    $default  accept


State 4

   11 stmt: IF . '(' expr ')' stmt
   12     | IF . '(' expr ')' stmt ELSE stmt

    '('  shift, and go to state 15


State 5

   13 stmt: WHILE . '(' expr ')' stmt

    '('  shift, and go to state 16


State 6

   14 stmt: FOR . '(' stmt expr ';' stmt ')' stmt

    '('  shift, and go to state 17


State 7

   19 stmt: PRINT . expr ';'

    FALSE  shift, and go to state 18
    TRUE   shift, and go to state 19
    ID     shift, and go to state 20
    VAL    shift, and go to state 21
    '('    shift, and go to state 22

    expr  go to state 23


State 8

    2 type: BOOL_TYPE .

    $default  reduce using rule 2 (type)


State 9

    3 type: INT_TYPE .

    $default  reduce using rule 3 (type)


State 10

   10 stmt: ID . '=' expr ';'
   15     | ID . INC ';'
   16     | ID . DEC ';'
   17     | ID . INCX expr ';'
   18     | ID . DECX expr ';'

    INC   shift, and go to state 24
    DEC   shift, and go to state 25
    INCX  shift, and go to state 26
    DECX  shift, and go to state 27
    '='   shift, and go to state 28


State 11

    9 stmt: '{' . stmts '}'

    IF     shift, and go to state 4
    WHILE  shift, and go to state 5
    FOR    shift, and go to state 6
    PRINT  shift, and go to state 7
    ID     shift, and go to state 10
    '{'    shift, and go to state 11

    stmts  go to state 29
    stmt   go to state 30


State 12

    6 decl: type . ID ';'

    ID  shift, and go to state 31


State 13

    4 decls: decls decl .

    $default  reduce using rule 4 (decls)


State 14

    1 program: decls stmt .

    $default  reduce using rule 1 (program)


State 15

   11 stmt: IF '(' . expr ')' stmt
   12     | IF '(' . expr ')' stmt ELSE stmt

    FALSE  shift, and go to state 18
    TRUE   shift, and go to state 19
    ID     shift, and go to state 20
    VAL    shift, and go to state 21
    '('    shift, and go to state 22

    expr  go to state 32


State 16

   13 stmt: WHILE '(' . expr ')' stmt

    FALSE  shift, and go to state 18
    TRUE   shift, and go to state 19
    ID     shift, and go to state 20
    VAL    shift, and go to state 21
    '('    shift, and go to state 22

    expr  go to state 33


State 17

   14 stmt: FOR '(' . stmt expr ';' stmt ')' stmt

    IF     shift, and go to state 4
    WHILE  shift, and go to state 5
    FOR    shift, and go to state 6
    PRINT  shift, and go to state 7
    ID     shift, and go to state 10
    '{'    shift, and go to state 11

    stmt  go to state 34


State 18

   21 expr: FALSE .

    $default  reduce using rule 21 (expr)


State 19

   22 expr: TRUE .

    $default  reduce using rule 22 (expr)


State 20

   23 expr: ID .

    $default  reduce using rule 23 (expr)


State 21

   20 expr: VAL .

    $default  reduce using rule 20 (expr)


State 22

   24 expr: '(' . expr ')'

    FALSE  shift, and go to state 18
    TRUE   shift, and go to state 19
    ID     shift, and go to state 20
    VAL    shift, and go to state 21
    '('    shift, and go to state 22

    expr  go to state 35


State 23

   19 stmt: PRINT expr . ';'
   25 expr: expr . '+' expr
   26     | expr . '-' expr
   27     | expr . '*' expr
   28     | expr . '/' expr
   29     | expr . AND expr
   30     | expr . OR expr
   31     | expr . EQ expr
   32     | expr . NE expr
   33     | expr . GE expr
   34     | expr . LE expr
   35     | expr . '>' expr
   36     | expr . '<' expr

    AND  shift, and go to state 36
    OR   shift, and go to state 37
    GE   shift, and go to state 38
    LE   shift, and go to state 39
    EQ   shift, and go to state 40
    NE   shift, and go to state 41
    '>'  shift, and go to state 42
    '<'  shift, and go to state 43
    '+'  shift, and go to state 44
    '-'  shift, and go to state 45
    '*'  shift, and go to state 46
    '/'  shift, and go to state 47
    ';'  shift, and go to state 48


State 24

   15 stmt: ID INC . ';'

    ';'  shift, and go to state 49


State 25

   16 stmt: ID DEC . ';'

    ';'  shift, and go to state 50


State 26

   17 stmt: ID INCX . expr ';'

    FALSE  shift, and go to state 18
    TRUE   shift, and go to state 19
    ID     shift, and go to state 20
    VAL    shift, and go to state 21
    '('    shift, and go to state 22

    expr  go to state 51


State 27

   18 stmt: ID DECX . expr ';'

    FALSE  shift, and go to state 18
    TRUE   shift, and go to state 19
    ID     shift, and go to state 20
    VAL    shift, and go to state 21
    '('    shift, and go to state 22

    expr  go to state 52


State 28

   10 stmt: ID '=' . expr ';'

    FALSE  shift, and go to state 18
    TRUE   shift, and go to state 19
    ID     shift, and go to state 20
    VAL    shift, and go to state 21
    '('    shift, and go to state 22

    expr  go to state 53


State 29

    7 stmts: stmts . stmt
    9 stmt: '{' stmts . '}'

    IF     shift, and go to state 4
    WHILE  shift, and go to state 5
    FOR    shift, and go to state 6
    PRINT  shift, and go to state 7
    ID     shift, and go to state 10
    '{'    shift, and go to state 11
    '}'    shift, and go to state 54

    stmt  go to state 55


State 30

    8 stmts: stmt .

    $default  reduce using rule 8 (stmts)


State 31

    6 decl: type ID . ';'

    ';'  shift, and go to state 56


State 32

   11 stmt: IF '(' expr . ')' stmt
   12     | IF '(' expr . ')' stmt ELSE stmt
   25 expr: expr . '+' expr
   26     | expr . '-' expr
   27     | expr . '*' expr
   28     | expr . '/' expr
   29     | expr . AND expr
   30     | expr . OR expr
   31     | expr . EQ expr
   32     | expr . NE expr
   33     | expr . GE expr
   34     | expr . LE expr
   35     | expr . '>' expr
   36     | expr . '<' expr

    AND  shift, and go to state 36
    OR   shift, and go to state 37
    GE   shift, and go to state 38
    LE   shift, and go to state 39
    EQ   shift, and go to state 40
    NE   shift, and go to state 41
    '>'  shift, and go to state 42
    '<'  shift, and go to state 43
    '+'  shift, and go to state 44
    '-'  shift, and go to state 45
    '*'  shift, and go to state 46
    '/'  shift, and go to state 47
    ')'  shift, and go to state 57


State 33

   13 stmt: WHILE '(' expr . ')' stmt
   25 expr: expr . '+' expr
   26     | expr . '-' expr
   27     | expr . '*' expr
   28     | expr . '/' expr
   29     | expr . AND expr
   30     | expr . OR expr
   31     | expr . EQ expr
   32     | expr . NE expr
   33     | expr . GE expr
   34     | expr . LE expr
   35     | expr . '>' expr
   36     | expr . '<' expr

    AND  shift, and go to state 36
    OR   shift, and go to state 37
    GE   shift, and go to state 38
    LE   shift, and go to state 39
    EQ   shift, and go to state 40
    NE   shift, and go to state 41
    '>'  shift, and go to state 42
    '<'  shift, and go to state 43
    '+'  shift, and go to state 44
    '-'  shift, and go to state 45
    '*'  shift, and go to state 46
    '/'  shift, and go to state 47
    ')'  shift, and go to state 58


State 34

   14 stmt: FOR '(' stmt . expr ';' stmt ')' stmt

    FALSE  shift, and go to state 18
    TRUE   shift, and go to state 19
    ID     shift, and go to state 20
    VAL    shift, and go to state 21
    '('    shift, and go to state 22

    expr  go to state 59


State 35

   24 expr: '(' expr . ')'
   25     | expr . '+' expr
   26     | expr . '-' expr
   27     | expr . '*' expr
   28     | expr . '/' expr
   29     | expr . AND expr
   30     | expr . OR expr
   31     | expr . EQ expr
   32     | expr . NE expr
   33     | expr . GE expr
   34     | expr . LE expr
   35     | expr . '>' expr
   36     | expr . '<' expr

    AND  shift, and go to state 36
    OR   shift, and go to state 37
    GE   shift, and go to state 38
    LE   shift, and go to state 39
    EQ   shift, and go to state 40
    NE   shift, and go to state 41
    '>'  shift, and go to state 42
    '<'  shift, and go to state 43
    '+'  shift, and go to state 44
    '-'  shift, and go to state 45
    '*'  shift, and go to state 46
    '/'  shift, and go to state 47
    ')'  shift, and go to state 60


State 36

   29 expr: expr AND . expr

    FALSE  shift, and go to state 18
    TRUE   shift, and go to state 19
    ID     shift, and go to state 20
    VAL    shift, and go to state 21
    '('    shift, and go to state 22

    expr  go to state 61


State 37

   30 expr: expr OR . expr

    FALSE  shift, and go to state 18
    TRUE   shift, and go to state 19
    ID     shift, and go to state 20
    VAL    shift, and go to state 21
    '('    shift, and go to state 22

    expr  go to state 62


State 38

   33 expr: expr GE . expr

    FALSE  shift, and go to state 18
    TRUE   shift, and go to state 19
    ID     shift, and go to state 20
    VAL    shift, and go to state 21
    '('    shift, and go to state 22

    expr  go to state 63


State 39

   34 expr: expr LE . expr

    FALSE  shift, and go to state 18
    TRUE   shift, and go to state 19
    ID     shift, and go to state 20
    VAL    shift, and go to state 21
    '('    shift, and go to state 22

    expr  go to state 64


State 40

   31 expr: expr EQ . expr

    FALSE  shift, and go to state 18
    TRUE   shift, and go to state 19
    ID     shift, and go to state 20
    VAL    shift, and go to state 21
    '('    shift, and go to state 22

    expr  go to state 65


State 41

   32 expr: expr NE . expr

    FALSE  shift, and go to state 18
    TRUE   shift, and go to state 19
    ID     shift, and go to state 20
    VAL    shift, and go to state 21
    '('    shift, and go to state 22

    expr  go to state 66


State 42

   35 expr: expr '>' . expr

    FALSE  shift, and go to state 18
    TRUE   shift, and go to state 19
    ID     shift, and go to state 20
    VAL    shift, and go to state 21
    '('    shift, and go to state 22

    expr  go to state 67


State 43

   36 expr: expr '<' . expr

    FALSE  shift, and go to state 18
    TRUE   shift, and go to state 19
    ID     shift, and go to state 20
    VAL    shift, and go to state 21
    '('    shift, and go to state 22

    expr  go to state 68


State 44

   25 expr: expr '+' . expr

    FALSE  shift, and go to state 18
    TRUE   shift, and go to state 19
    ID     shift, and go to state 20
    VAL    shift, and go to state 21
    '('    shift, and go to state 22

    expr  go to state 69


State 45

   26 expr: expr '-' . expr

    FALSE  shift, and go to state 18
    TRUE   shift, and go to state 19
    ID     shift, and go to state 20
    VAL    shift, and go to state 21
    '('    shift, and go to state 22

    expr  go to state 70


State 46

   27 expr: expr '*' . expr

    FALSE  shift, and go to state 18
    TRUE   shift, and go to state 19
    ID     shift, and go to state 20
    VAL    shift, and go to state 21
    '('    shift, and go to state 22

    expr  go to state 71


State 47

   28 expr: expr '/' . expr

    FALSE  shift, and go to state 18
    TRUE   shift, and go to state 19
    ID     shift, and go to state 20
    VAL    shift, and go to state 21
    '('    shift, and go to state 22

    expr  go to state 72


State 48

   19 stmt: PRINT expr ';' .

    $default  reduce using rule 19 (stmt)


State 49

   15 stmt: ID INC ';' .

    $default  reduce using rule 15 (stmt)


State 50

   16 stmt: ID DEC ';' .

    $default  reduce using rule 16 (stmt)


State 51

   17 stmt: ID INCX expr . ';'
   25 expr: expr . '+' expr
   26     | expr . '-' expr
   27     | expr . '*' expr
   28     | expr . '/' expr
   29     | expr . AND expr
   30     | expr . OR expr
   31     | expr . EQ expr
   32     | expr . NE expr
   33     | expr . GE expr
   34     | expr . LE expr
   35     | expr . '>' expr
   36     | expr . '<' expr

    AND  shift, and go to state 36
    OR   shift, and go to state 37
    GE   shift, and go to state 38
    LE   shift, and go to state 39
    EQ   shift, and go to state 40
    NE   shift, and go to state 41
    '>'  shift, and go to state 42
    '<'  shift, and go to state 43
    '+'  shift, and go to state 44
    '-'  shift, and go to state 45
    '*'  shift, and go to state 46
    '/'  shift, and go to state 47
    ';'  shift, and go to state 73


State 52

   18 stmt: ID DECX expr . ';'
   25 expr: expr . '+' expr
   26     | expr . '-' expr
   27     | expr . '*' expr
   28     | expr . '/' expr
   29     | expr . AND expr
   30     | expr . OR expr
   31     | expr . EQ expr
   32     | expr . NE expr
   33     | expr . GE expr
   34     | expr . LE expr
   35     | expr . '>' expr
   36     | expr . '<' expr

    AND  shift, and go to state 36
    OR   shift, and go to state 37
    GE   shift, and go to state 38
    LE   shift, and go to state 39
    EQ   shift, and go to state 40
    NE   shift, and go to state 41
    '>'  shift, and go to state 42
    '<'  shift, and go to state 43
    '+'  shift, and go to state 44
    '-'  shift, and go to state 45
    '*'  shift, and go to state 46
    '/'  shift, and go to state 47
    ';'  shift, and go to state 74


State 53

   10 stmt: ID '=' expr . ';'
   25 expr: expr . '+' expr
   26     | expr . '-' expr
   27     | expr . '*' expr
   28     | expr . '/' expr
   29     | expr . AND expr
   30     | expr . OR expr
   31     | expr . EQ expr
   32     | expr . NE expr
   33     | expr . GE expr
   34     | expr . LE expr
   35     | expr . '>' expr
   36     | expr . '<' expr

    AND  shift, and go to state 36
    OR   shift, and go to state 37
    GE   shift, and go to state 38
    LE   shift, and go to state 39
    EQ   shift, and go to state 40
    NE   shift, and go to state 41
    '>'  shift, and go to state 42
    '<'  shift, and go to state 43
    '+'  shift, and go to state 44
    '-'  shift, and go to state 45
    '*'  shift, and go to state 46
    '/'  shift, and go to state 47
    ';'  shift, and go to state 75


State 54

    9 stmt: '{' stmts '}' .

    $default  reduce using rule 9 (stmt)


State 55

    7 stmts: stmts stmt .

    $default  reduce using rule 7 (stmts)


State 56

    6 decl: type ID ';' .

    $default  reduce using rule 6 (decl)


State 57

   11 stmt: IF '(' expr ')' . stmt
   12     | IF '(' expr ')' . stmt ELSE stmt

    IF     shift, and go to state 4
    WHILE  shift, and go to state 5
    FOR    shift, and go to state 6
    PRINT  shift, and go to state 7
    ID     shift, and go to state 10
    '{'    shift, and go to state 11

    stmt  go to state 76


State 58

   13 stmt: WHILE '(' expr ')' . stmt

    IF     shift, and go to state 4
    WHILE  shift, and go to state 5
    FOR    shift, and go to state 6
    PRINT  shift, and go to state 7
    ID     shift, and go to state 10
    '{'    shift, and go to state 11

    stmt  go to state 77


State 59

   14 stmt: FOR '(' stmt expr . ';' stmt ')' stmt
   25 expr: expr . '+' expr
   26     | expr . '-' expr
   27     | expr . '*' expr
   28     | expr . '/' expr
   29     | expr . AND expr
   30     | expr . OR expr
   31     | expr . EQ expr
   32     | expr . NE expr
   33     | expr . GE expr
   34     | expr . LE expr
   35     | expr . '>' expr
   36     | expr . '<' expr

    AND  shift, and go to state 36
    OR   shift, and go to state 37
    GE   shift, and go to state 38
    LE   shift, and go to state 39
    EQ   shift, and go to state 40
    NE   shift, and go to state 41
    '>'  shift, and go to state 42
    '<'  shift, and go to state 43
    '+'  shift, and go to state 44
    '-'  shift, and go to state 45
    '*'  shift, and go to state 46
    '/'  shift, and go to state 47
    ';'  shift, and go to state 78


State 60

   24 expr: '(' expr ')' .

    $default  reduce using rule 24 (expr)


State 61

   25 expr: expr . '+' expr
   26     | expr . '-' expr
   27     | expr . '*' expr
   28     | expr . '/' expr
   29     | expr . AND expr
   29     | expr AND expr .
   30     | expr . OR expr
   31     | expr . EQ expr
   32     | expr . NE expr
   33     | expr . GE expr
   34     | expr . LE expr
   35     | expr . '>' expr
   36     | expr . '<' expr

    '+'  shift, and go to state 44
    '-'  shift, and go to state 45
    '*'  shift, and go to state 46
    '/'  shift, and go to state 47

    $default  reduce using rule 29 (expr)


State 62

   25 expr: expr . '+' expr
   26     | expr . '-' expr
   27     | expr . '*' expr
   28     | expr . '/' expr
   29     | expr . AND expr
   30     | expr . OR expr
   30     | expr OR expr .
   31     | expr . EQ expr
   32     | expr . NE expr
   33     | expr . GE expr
   34     | expr . LE expr
   35     | expr . '>' expr
   36     | expr . '<' expr

    '+'  shift, and go to state 44
    '-'  shift, and go to state 45
    '*'  shift, and go to state 46
    '/'  shift, and go to state 47

    $default  reduce using rule 30 (expr)


State 63

   25 expr: expr . '+' expr
   26     | expr . '-' expr
   27     | expr . '*' expr
   28     | expr . '/' expr
   29     | expr . AND expr
   30     | expr . OR expr
   31     | expr . EQ expr
   32     | expr . NE expr
   33     | expr . GE expr
   33     | expr GE expr .
   34     | expr . LE expr
   35     | expr . '>' expr
   36     | expr . '<' expr

    AND  shift, and go to state 36
    OR   shift, and go to state 37
    '+'  shift, and go to state 44
    '-'  shift, and go to state 45
    '*'  shift, and go to state 46
    '/'  shift, and go to state 47

    $default  reduce using rule 33 (expr)


State 64

   25 expr: expr . '+' expr
   26     | expr . '-' expr
   27     | expr . '*' expr
   28     | expr . '/' expr
   29     | expr . AND expr
   30     | expr . OR expr
   31     | expr . EQ expr
   32     | expr . NE expr
   33     | expr . GE expr
   34     | expr . LE expr
   34     | expr LE expr .
   35     | expr . '>' expr
   36     | expr . '<' expr

    AND  shift, and go to state 36
    OR   shift, and go to state 37
    '+'  shift, and go to state 44
    '-'  shift, and go to state 45
    '*'  shift, and go to state 46
    '/'  shift, and go to state 47

    $default  reduce using rule 34 (expr)


State 65

   25 expr: expr . '+' expr
   26     | expr . '-' expr
   27     | expr . '*' expr
   28     | expr . '/' expr
   29     | expr . AND expr
   30     | expr . OR expr
   31     | expr . EQ expr
   31     | expr EQ expr .
   32     | expr . NE expr
   33     | expr . GE expr
   34     | expr . LE expr
   35     | expr . '>' expr
   36     | expr . '<' expr

    AND  shift, and go to state 36
    OR   shift, and go to state 37
    '+'  shift, and go to state 44
    '-'  shift, and go to state 45
    '*'  shift, and go to state 46
    '/'  shift, and go to state 47

    $default  reduce using rule 31 (expr)


State 66

   25 expr: expr . '+' expr
   26     | expr . '-' expr
   27     | expr . '*' expr
   28     | expr . '/' expr
   29     | expr . AND expr
   30     | expr . OR expr
   31     | expr . EQ expr
   32     | expr . NE expr
   32     | expr NE expr .
   33     | expr . GE expr
   34     | expr . LE expr
   35     | expr . '>' expr
   36     | expr . '<' expr

    AND  shift, and go to state 36
    OR   shift, and go to state 37
    '+'  shift, and go to state 44
    '-'  shift, and go to state 45
    '*'  shift, and go to state 46
    '/'  shift, and go to state 47

    $default  reduce using rule 32 (expr)


State 67

   25 expr: expr . '+' expr
   26     | expr . '-' expr
   27     | expr . '*' expr
   28     | expr . '/' expr
   29     | expr . AND expr
   30     | expr . OR expr
   31     | expr . EQ expr
   32     | expr . NE expr
   33     | expr . GE expr
   34     | expr . LE expr
   35     | expr . '>' expr
   35     | expr '>' expr .
   36     | expr . '<' expr

    AND  shift, and go to state 36
    OR   shift, and go to state 37
    '+'  shift, and go to state 44
    '-'  shift, and go to state 45
    '*'  shift, and go to state 46
    '/'  shift, and go to state 47

    $default  reduce using rule 35 (expr)


State 68

   25 expr: expr . '+' expr
   26     | expr . '-' expr
   27     | expr . '*' expr
   28     | expr . '/' expr
   29     | expr . AND expr
   30     | expr . OR expr
   31     | expr . EQ expr
   32     | expr . NE expr
   33     | expr . GE expr
   34     | expr . LE expr
   35     | expr . '>' expr
   36     | expr . '<' expr
   36     | expr '<' expr .

    AND  shift, and go to state 36
    OR   shift, and go to state 37
    '+'  shift, and go to state 44
    '-'  shift, and go to state 45
    '*'  shift, and go to state 46
    '/'  shift, and go to state 47

    $default  reduce using rule 36 (expr)


State 69

   25 expr: expr . '+' expr
   25     | expr '+' expr .
   26     | expr . '-' expr
   27     | expr . '*' expr
   28     | expr . '/' expr
   29     | expr . AND expr
   30     | expr . OR expr
   31     | expr . EQ expr
   32     | expr . NE expr
   33     | expr . GE expr
   34     | expr . LE expr
   35     | expr . '>' expr
   36     | expr . '<' expr

    '*'  shift, and go to state 46
    '/'  shift, and go to state 47

    $default  reduce using rule 25 (expr)


State 70

   25 expr: expr . '+' expr
   26     | expr . '-' expr
   26     | expr '-' expr .
   27     | expr . '*' expr
   28     | expr . '/' expr
   29     | expr . AND expr
   30     | expr . OR expr
   31     | expr . EQ expr
   32     | expr . NE expr
   33     | expr . GE expr
   34     | expr . LE expr
   35     | expr . '>' expr
   36     | expr . '<' expr

    '*'  shift, and go to state 46
    '/'  shift, and go to state 47

    $default  reduce using rule 26 (expr)


State 71

   25 expr: expr . '+' expr
   26     | expr . '-' expr
   27     | expr . '*' expr
   27     | expr '*' expr .
   28     | expr . '/' expr
   29     | expr . AND expr
   30     | expr . OR expr
   31     | expr . EQ expr
   32     | expr . NE expr
   33     | expr . GE expr
   34     | expr . LE expr
   35     | expr . '>' expr
   36     | expr . '<' expr

    $default  reduce using rule 27 (expr)


State 72

   25 expr: expr . '+' expr
   26     | expr . '-' expr
   27     | expr . '*' expr
   28     | expr . '/' expr
   28     | expr '/' expr .
   29     | expr . AND expr
   30     | expr . OR expr
   31     | expr . EQ expr
   32     | expr . NE expr
   33     | expr . GE expr
   34     | expr . LE expr
   35     | expr . '>' expr
   36     | expr . '<' expr

    $default  reduce using rule 28 (expr)


State 73

   17 stmt: ID INCX expr ';' .

    $default  reduce using rule 17 (stmt)


State 74

   18 stmt: ID DECX expr ';' .

    $default  reduce using rule 18 (stmt)


State 75

   10 stmt: ID '=' expr ';' .

    $default  reduce using rule 10 (stmt)


State 76

   11 stmt: IF '(' expr ')' stmt .
   12     | IF '(' expr ')' stmt . ELSE stmt

    ELSE  shift, and go to state 79

    $default  reduce using rule 11 (stmt)


State 77

   13 stmt: WHILE '(' expr ')' stmt .

    $default  reduce using rule 13 (stmt)


State 78

   14 stmt: FOR '(' stmt expr ';' . stmt ')' stmt

    IF     shift, and go to state 4
    WHILE  shift, and go to state 5
    FOR    shift, and go to state 6
    PRINT  shift, and go to state 7
    ID     shift, and go to state 10
    '{'    shift, and go to state 11

    stmt  go to state 80


State 79

   12 stmt: IF '(' expr ')' stmt ELSE . stmt

    IF     shift, and go to state 4
    WHILE  shift, and go to state 5
    FOR    shift, and go to state 6
    PRINT  shift, and go to state 7
    ID     shift, and go to state 10
    '{'    shift, and go to state 11

    stmt  go to state 81


State 80
